[package]
name = "nukerus-wasm"
version = "0.1.1"
edition = "2021"

[dependencies]
atrium-api = "0.24.10"
cid = "0.11.1"
ipld-core = "0.4.1"
lazy_static = "1.5.0"
multihash = "0.19.3"
rs-car-sync = "0.4.1"
serde = "1.0.217"
serde_ipld_dagcbor = "0.6.1"
serde_json = "1.0.137"
thiserror = "2.0.11"
tracing = "0.1.41"
# excludeb-luesky-firehose-stream = { version = "0.1.1", features = [] }
# excludeo-penssl = { version = "0.10.68", features = ["vendored"] }
wasm-bindgen = "0.2.100"

# [build-dependencies]
# wasm-bindgen-cli = "0.2.100"

[dependencies.cid_old]
package = "cid"
version = "0.10"

[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib", "rlib"]  # ?? no clue what this shit is for
path = "./lib.rs"
