[package]
name = "nukerus-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

[lib]
crate-type = ["cdylib", "rlib"]  # ?? no clue what this shit is for
path = "./lib.rs"
